# rust-imap

./: .cirrus.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  README.tpl  appveyor.yml  azure-pipelines.yml  example.rs
.github/workflows/: check.yml  coverage.yml  features.yml  minimal.yml  msrv.yml  os-check.yml  scheduled.yml  test.yml
examples/: README.md  basic.rs  gmail_app_password.rs  gmail_oauth2.rs  idle.rs  plaintext.rs  rustls.rs  rustls_sasl.rs  rustls_sasl_gss.rs  starttls.rs  timeout.rs
examples/outlook_oauth2/: .env.sample  README.md  main.rs  state.rs  utils.rs
examples/outlook_oauth2/certs/: imap.local.crt  imap.local.key
src/: authenticator.rs  client.rs  client_builder.rs  conn.rs  error.rs  lib.rs  mailbox.rs  mock_stream.rs  parse.rs  testing.rs  unsolicited_responses.rs  utils.rs
src/extensions/: idle.rs  list_status.rs  metadata.rs  mod.rs  sort.rs
src/types/: acls.rs  appended.rs  capabilities.rs  deleted.rs  fetch.rs  flag.rs  id.rs  mailbox.rs  mod.rs  name.rs  quota.rs  unsolicited_response.rs
tests/: builder_integration.rs  imap_integration.rs  integration.rs
