[package]
name = "imap"
version = "3.0.0-alpha.4"
authors = ["Jon Gjengset <jon@thesquareplanet.com>",
           "Matt McCoy <mattnenterprise@yahoo.com>"]
documentation = "https://docs.rs/imap/"
repository = "https://github.com/jonhoo/rust-imap"
homepage = "https://github.com/jonhoo/rust-imap"
description = "IMAP client for Rust"
license = "Apache-2.0 OR MIT"
edition = "2018"

keywords = ["email", "imap"]
categories = ["email", "network-programming"]

[features]
rustls-tls = ["rustls-connector"]
default = ["native-tls"]

[dependencies]
native-tls = { version = "0.2.2", optional = true }
rustls-connector = { version = "0.13.1", optional = true }
regex = "1.0"
bufstream = "0.1"
imap-proto = "0.14.1"
nom = { version = "6.0", default-features = false }
base64 = "0.13"
chrono = { version = "0.4", default-features = false, features = ["std"]}
lazy_static = "1.4"

[dev-dependencies]
lettre = "0.9"
lettre_email = "0.9"
rustls-connector = "0.13.0"
structopt = "0.3"

[[example]]
name = "basic"
required-features = ["default"]

[[example]]
name = "gmail_oauth2"
required-features = ["default"]

[[example]]
name = "idle"
required-features = ["default"]

[[example]]
name = "rustls"
required-features = ["rustls-tls"]

[[example]]
name = "starttls"
required-features = ["default"]

[[example]]
name = "timeout"
required-features = ["default"]

[[test]]
name = "imap_integration"
required-features = ["default"]
