[package]
name = "imap"
version = "3.0.0-alpha.9"
authors = ["Jon Gjengset <jon@thesquareplanet.com>",
           "Matt McCoy <mattnenterprise@yahoo.com>"]
documentation = "https://docs.rs/imap/"
repository = "https://github.com/jonhoo/rust-imap"
homepage = "https://github.com/jonhoo/rust-imap"
description = "IMAP client for Rust"
license = "Apache-2.0 OR MIT"
edition = "2021"

keywords = ["email", "imap"]
categories = ["email", "network-programming"]

[features]
rustls-tls = ["rustls-connector"]
default = ["native-tls"]
# Used to activate full integration tests when running against a more complete IMAP server
test-full-imap = []

[dependencies]
native-tls = { version = "0.2.2", optional = true }
rustls-connector = { version = "0.16.1", optional = true }
regex = "1.0"
bufstream = "0.1.3"
imap-proto = "0.16.1"
nom = { version = "7.1.0", default-features = false }
rsasl = { version = "2.0.0-rc.2", default-features = false, features = ["provider_base64"], optional = true }
base64 = "0.13.0"
chrono = { version = "0.4", default-features = false, features = ["std"]}
lazy_static = "1.4"
ouroboros = "0.15.0"

[dev-dependencies]
lettre = "0.10"
rustls-connector = "0.16.1"
structopt = "0.3"

# to make -Zminimal-versions work
encoding = "0.2.32"
failure = "0.1.8"
mime = "0.3.4"

rsasl = { version = "2.0.0-rc.2", default-features = false, features = ["config_builder"] }

[[example]]
name = "basic"
required-features = ["default"]

[[example]]
name = "gmail_oauth2"
required-features = ["default"]

[[example]]
name = "idle"
required-features = ["default"]

[[example]]
name = "rustls"
required-features = ["rustls-tls"]

[[example]]
name = "starttls"
required-features = ["default"]

[[example]]
name = "timeout"
required-features = ["default"]

[[test]]
name = "imap_integration"
required-features = ["default"]

[[example]]
name = "rustls_sasl"
required-features = ["rustls-tls", "rsasl"]
